fixed text alignment on search page

--- a/src/app/pages/search/search.page.scss
+++ b/src/app/pages/search/search.page.scss
@@ -46,7 +46,7 @@ ion-item {
 }
 
 ion-select {
-  float: start;
+  float: right;
   padding: 7px 0 7px 5px;
   width: 80%;
   position: relative;
